Fixes sidebar and codemirror dimensions when scrollbars are active, styles scrollbar in dark theme

--- a/client/src/app/UI/expression-editor/expression-text-editor/expression-text-editor.component.scss
+++ b/client/src/app/UI/expression-editor/expression-text-editor/expression-text-editor.component.scss
@@ -37,6 +37,10 @@
     padding: 0;
 }
 
+.code-mirror-container {
+    max-width: 50vw;
+}
+
 h3 {
     margin-top: $sz-unit;
     margin-bottom: 0px;
